<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="braille_ime_name">Braille hardware keyboard</string>
  <string name="bd_application_name">Android Accessibility Suite</string>
  <string name="bd_ime_unavailable_activity_name">TalkBack braille keyboard unavailable</string>
  <string name="bd_ime_disabled_dialog_title">Turn on TalkBack braille keyboard</string>
  <string name="bd_ime_disabled_dialog_message">To use your braille display for typing, go to input settings to turn it on</string>
  <string name="bd_ime_disabled_dialog_title_positive">Input settings</string>
  <string name="bd_ime_not_default_dialog_title">Switch your input method</string>
  <string name="bd_ime_not_default_dialog_message">To continue typing, set the TalkBack braille keyboard as your input method</string>
  <string name="bd_ime_not_default_dialog_positive">Switch input</string>
  <string name="checkmark_not_checked" translatable="false">( )</string>
  <string name="checkmark_checked" translatable="false">(x)</string>
  <string name="type_unlabeled">Unlabeled</string>
  <string name="type_unlabeled_edittext">Unlabeled Edit Box</string>
  <string name="type_unlabeled_image">Unlabeled Image</string>
  <string name="type_unlabeled_button">Unlabeled Button</string>
  <string name="type_unlabeled_seekbar">Unlabeled Seek Control</string>
  <string name="type_unlabeled_quickcontact">Unlabeled Contact</string>
  <string name="bd_switch_typing_language_announcement">Typing language switched to %s</string>
  <string name="bd_switch_reading_language_announcement">Reading language switched to %s</string>
  <string name="bd_switch_contracted_mode_announcement">To switch between contracted and uncontracted, press space and dots 1, 2, 4, and 5.</string>
  <string name="bd_switch_to_contracted">contracted</string>
  <string name="bd_switch_to_uncontracted">uncontracted</string>
  <string name="bd_turn_braille_display_on">Turn on braille display</string>
  <string name="bd_turn_braille_display_off">Turn off braille display</string>
  <string name="overlay_pan_left_button">Pan left</string>
  <string name="overlay_pan_right_button">Pan right</string>
  <string name="bd_preferences_title">Braille display</string>
  <string name="bd_preferences_banner_talkback_off_subtitle">To use braille display, first turn on TalkBack</string>
  <string name="bd_preferences_banner_talkback_off_button">Go to TalkBack</string>
  <string name="bd_preferences_banner_bluetooth_off_subtitle">To use braille display, first turn on Bluetooth</string>
  <string name="bd_preferences_banner_bluetooth_off_button">Turn on Bluetooth</string>
  <string name="bd_preferences_banner_nearby_devices_permission_not_granted_subtitle">To use braille display, %s needs access to nearby devices</string>
  <string name="bd_preferences_banner_location_permission_not_granted_subtitle">You need to enable \"Location\" permission for %s before you can use braille display</string>
  <string name="bd_preferences_banner_permission_not_granted_button">Permission settings</string>
  <string name="bd_preferences_banner_permission_not_granted_system_dialog_button">Update permission</string>
  <string name="bd_preferences_banner_location_settings_not_enabled_subtitle">To use braille display, %s needs access to your device’s location</string>
  <string name="bd_preferences_banner_location_settings_not_enabled_button">Location settings</string>
  <string name="bd_preference_enabler_title">Use braille display</string>
  <string name="bd_preference_connection_category_title">Devices</string>
  <string name="bd_preference_scan_inactivated_title">Look for new device</string>
  <string name="bd_preference_scan_activated_title">Looking for devices…</string>
  <string name="bd_preference_languages_and_commands_category_title">Languages and commands</string>
  <string name="pref_codes_title">Languages</string>
  <string name="pref_preferred_output_codes_title">Preferred reading language</string>
  <string name="pref_preferred_input_codes_title">Preferred typing language</string>
  <string name="pref_preferred_braille_grade_title">Preferred braille grade</string>
  <string name="bd_switch_input_code_gesture_tip_dialog_title">Quickly change typing language</string>
  <string name="bd_switch_output_code_gesture_tip_dialog_title">Quickly change reading language</string>
  <string name="bd_switch_input_code_gesture_tip_dialog_message">To change your typing language, press %s at the same time</string>
  <string name="bd_switch_output_code_gesture_tip_dialog_message">To change your reading language, press %s at the same time</string>
  <string name="bd_preference_key_advanced_settings_title">Advanced settings</string>
  <string name="bd_bt_connect_fail_dialog_title_with_name">Can\'t connect to %s</string>
  <string name="bd_bt_connect_fail_dialog_title_without_name">Can\'t connect to device</string>
  <string name="bd_bt_connect_fail_dialog_message">Make sure this braille display is turned on and nearby.\n\nIf it still won\'t connect, double-tap \"Learn more\" for other troubleshooting suggestions.</string>
  <string name="bd_bt_connect_fail_positive_button">Learn more</string>
  <string name="bd_bt_connect_fail_negative_button">Cancel</string>
  <string name="bd_preference_braille_contracted">Contracted braille</string>
  <string name="bd_preference_braille_uncontracted">Uncontracted braille</string>
  <string name="bd_braille_grade_tips">To quickly switch between contracted and uncontracted using a braille display, press space and dots 1, 2, 4, 5.\n\nThis command works if you’re using a language with both braille grades.</string>
  <string name="bd_preference_key_bindings_title">Braille display commands</string>
  <string name="bd_preference_key_bindings_summary">Learn key commands for your braille display</string>
  <string name="bd_commands_bindings_instructions">Use navigation keys to move the focus on the screen. Use the braille keys to enter text in a text box.\n\nBelow are all the commands supported by your device.</string>
  <string name="bd_commands_bindings_category_basic_controls_title">Basic controls</string>
  <string name="bd_commands_bindings_category_basic_controls_summary">Pan and activate</string>
  <string name="bd_commands_bindings_category_navigation_title">Navigation</string>
  <string name="bd_commands_bindings_category_navigation_summary">Moving between items</string>
  <string name="bd_commands_bindings_category_system_actions_title">System actions</string>
  <string name="bd_commands_bindings_category_system_actions_summary">Back, home, notifications and more</string>
  <string name="bd_commands_bindings_category_talkback_features_title">TalkBack features</string>
  <string name="bd_commands_bindings_category_talkback_features_summary">Talkback menus and settings</string>
  <string name="bd_commands_bindings_category_braille_settings_title">Braille settings</string>
  <string name="bd_commands_bindings_category_braille_settings_summary">Braille language and settings</string>
  <string name="bd_commands_bindings_category_text_editing_title">Text editing</string>
  <string name="bd_commands_bindings_category_text_editing_summary">Move cursor and delete text</string>
  <string name="bd_preference_key_braille_elements_title">Braille elements</string>
  <string name="bd_preference_key_braille_elements_summary">Learn how on-screen elements are shown on your braille display</string>
  <string name="bd_braille_elements_instructions">Elements on your screen are represented by the following abbreviation symbols on your braille display</string>
  <string name="bd_braille_elements_category_interacting_with_screen">Interacting with the screen</string>
  <string name="bd_braille_elements_category_reading">Reading</string>
  <string name="bd_braille_elements_btn">• btn represents button</string>
  <string name="bd_braille_elements_lnk">• lnk represents link</string>
  <string name="bd_braille_elements_drbtn">• drbtn represents a dropdown button</string>
  <string name="bd_braille_elements_clickable">• ⠿⠄ represents an element that you can activate</string>
  <string name="bd_braille_elements_longClickable">• ⠿⠤ represents an element that you can touch and hold</string>
  <string name="bd_braille_elements_edt">• edt represents an editable text field</string>
  <string name="bd_braille_elements_mln">• mln represents a text field with multiple lines</string>
  <string name="bd_braille_elements_checked">• () or (x) represents a checkbox or radio button</string>
  <string name="bd_braille_elements_checked_content_description">• Parentheses or x in parentheses represents a checkbox or radio button</string>
  <string name="bd_braille_elements_sel">• sel represents a selected element</string>
  <string name="bd_braille_elements_gra">• gra represents a graphic</string>
  <string name="bd_braille_elements_hdg">• hdg represents heading</string>
  <string name="bd_braille_elements_h1_to_h6">• h%1$s to h%2$s represents heading %1$s to heading %2$s</string>
  <string name="bd_braille_elements_expanded">• - represents expanded</string>
  <string name="bd_braille_elements_expanded_content_description">• Minus represents expanded</string>
  <string name="bd_braille_elements_collapsed">• + represents collapsed</string>
  <string name="bd_braille_elements_new_line">• ⠫⠇ represents a new line</string>
  <string name="bd_preference_key_auto_scroll_title">Auto-scroll</string>
  <string name="bd_preference_key_auto_scroll_summary">Automatically advance the braille display at a set speed</string>
  <string name="bd_auto_scroll_instructions">Your braille display can advance at a set speed so you can read without pressing any buttons. To turn auto-scroll on or off, press space and dots 1, 2, 4, 5, 6</string>
  <string name="bd_auto_scroll_tips">To increase the display duration, press dot 4. To decrease the display duration, press dot 1.\n\nThese commands only work when auto-scroll is turned on.</string>
  <string name="bd_auto_adjust_duration_title">Automatically adjust display duration</string>
  <string name="bd_auto_adjust_duration_summary">Display duration changes based on text length</string>
  <string name="bd_auto_scroll_duration_title">Default display duration</string>
  <string name="bd_auto_scroll_duration_value_text">%s sec</string>
  <string name="bd_auto_scroll_duration_unit">Seconds</string>
  <string name="bd_auto_scroll_duration_minimum">minimum</string>
  <string name="bd_auto_scroll_duration_maximum">maximum</string>
  <string name="bd_auto_scroll_duration_prefix">%1$s, %2$s</string>
  <string name="bd_new_device_found_announcement">1 device found</string>
  <string name="bd_no_devices_found">No devices found. Try again.</string>
  <string name="bd_preference_device_item_button_disconnect">Disconnect</string>
  <string name="bd_preference_device_item_button_connect">Connect</string>
  <string name="bd_preference_device_item_button_forget">Forget</string>
  <string name="bd_preference_device_item_summary_connecting">Connecting…</string>
  <string name="bd_preference_device_item_summary_connected">Active</string>
  <string name="bd_preference_device_item_summary_available">Available</string>
  <string name="bd_preference_device_item_summary_saved_and_available">Saved, available</string>
  <string name="bd_preference_device_item_summary_saved_out_of_range">Saved</string>
  <string name="bd_preference_general_category_title">General</string>
  <string name="bd_preference_auto_connect_title">Auto-connect</string>
  <string name="bd_preference_auto_connect_summary">Allow saved braille displays to connect when nearby</string>
  <string name="bd_preference_reverse_panning_buttons_title">Reverse pan up and pan down buttons</string>
  <string name="bd_preference_braille_overlay_title">Show braille output on screen</string>
  <string name="bd_preference_timed_message_duration_title">Message duration</string>
</resources>